# gpmcp-template

./: .gitignore  Cargo.toml  release-plz.toml  setup.sh  sonar-project.properties
.github/workflows/: autofix.yml  ci.yml  sonarqube.yml
crates/api/: CHANGELOG.md  Cargo.toml
crates/api/src/: lib.rs
crates/app/: CHANGELOG.md  Cargo.toml
crates/ci/: CHANGELOG.md  Cargo.toml
crates/ci/tests/: autofix.rs  ci.rs
crates/client/: CHANGELOG.md  Cargo.toml
crates/domain/: CHANGELOG.md  Cargo.toml
crates/domain/src/: error.rs
crates/infra/: CHANGELOG.md  Cargo.toml
crates/services/: CHANGELOG.md  Cargo.toml
crates/tests/: CHANGELOG.md  Cargo.toml
crates/tests/tests/: integration_test.rs
