[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
derive_setters = "0.1"
derive_more = { version = "2.0", features = ["from_str", "display", "from", "into"] }
derive_builder = "0.20"
derive-getters = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
bytes = "1.10"
dotenvy = "0.15"
tempfile = "3.20"
reqwest = "0.12"
http = "1.3"
hyper-util = { version = "0.1", features = ["server"] }
bollard = "0.19"
prost-types = "0.14"
tracing = "0.1"
insta = { version = "1.42", features = ["json"] }
tokio-test = "0.4"
backon = "1.4"
futures = "0.3"

# Workspace crates
project_domain = { path = "crates/domain" }
project_infra = { path = "crates/infra" }
project_services = { path = "crates/services" }
project_app = { path = "crates/app" }
project_client = { path = "crates/client" }
